# demoglasses

./: CMakeLists.txt  README.md  demoglasses.pro  detector.cpp  detector.h  mainwindow.cpp  mainwindow.h
